--- a/object_detection/workspace/ssd_mobilenet_v1_pascal.config
+++ b/object_detection/workspace/ssd_mobilenet_v1_pascal.config
@@ -148,7 +148,7 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "object_detection/VOC0712/mobilenet_ckpts/ssd_mobilenet_v1_coco_11_06_2017/model.ckpt"
+  fine_tune_checkpoint: "object_detection/VOC0712/model.ckpt-1242829"
   from_detection_checkpoint: true
   data_augmentation_options {
     random_horizontal_flip {
